[metadata]
name = fangraphs
author = Jacob Lee
author_email = JLpython@outlook.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = http://github.com/JLpython-py/FanGraphs-Export
requires_python = >= 3.6
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
